More supported platforms.
git-svn-id: svn://svn.code.sf.net/p/directnet/code/trunk/directnet@40 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 Todo by ALPHA 0.2:
 Beter UI
 dcr (see PROTOCOL)
+fnd weak detection
 
 Todo by ALPHA 0.3:
 Intermediate routes on fnr (so that warning on broken route is possible)
