--- a/directnet/TODO
+++ b/directnet/TODO
@@ -1,6 +1,7 @@
 Todo by ALPHA 0.2:
 Beter UI
 dcr (see PROTOCOL)
+fnd weak detection
 
 Todo by ALPHA 0.3:
 Intermediate routes on fnr (so that warning on broken route is possible)
