--- a/directnet/TODO
+++ b/directnet/TODO
@@ -4,5 +4,10 @@ dcr (see PROTOCOL)
 fnd weak detection
 
 Todo by ALPHA 0.3:
+dcr in UI
 Intermediate routes on fnr (so that warning on broken route is possible)
 Buddy list (sorta)
+Chat rooms (sorta)
+
+Todo by ALPHA 0.4:
+Transfer files
