Fully working connection-strengthening weak-route-testing.
git-svn-id: svn://svn.code.sf.net/p/directnet/code/trunk/directnet@42 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/TODO
+++ b/TODO
@@ -4,5 +4,10 @@ dcr (see PROTOCOL)
 fnd weak detection
 
 Todo by ALPHA 0.3:
+dcr in UI
 Intermediate routes on fnr (so that warning on broken route is possible)
 Buddy list (sorta)
+Chat rooms (sorta)
+
+Todo by ALPHA 0.4:
+Transfer files
