Part way through separating UI and connection commands.
git-svn-id: svn://svn.code.sf.net/p/directnet/code/trunk/directnet@59 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/TODO
+++ b/TODO
@@ -1,9 +1,10 @@
 Todo by ALPHA 0.3:
+Separate UI and connection code properly
 dcr in UI
-Intermediate routes on fnr (so that warning on broken route is possible)
 Buddy list (sorta)
 
 Todo by ALPHA 0.4:
+Intermediate routes on fnr (so that warning on broken route is possible)
 Transfer files
 Chat rooms (sorta)
 
