--- a/directnet/TODO
+++ b/directnet/TODO
@@ -1,6 +1,6 @@
 Todo by ALPHA 0.3:
-Separate UI and connection code properly
-dcr in UI
+x Separate UI and connection code properly
+x dcr in UI
 Buddy list (sorta)
 
 Todo by ALPHA 0.4:
