Updated the TODO
git-svn-id: svn://svn.code.sf.net/p/directnet/code/trunk/directnet@63 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/TODO
+++ b/TODO
@@ -8,6 +8,9 @@ Intermediate routes on fnr (so that warning on broken route is possible)
 Transfer files
 Chat rooms (sorta)
 
+Todo ... sometime:
+Generic service commands (video chat, audio chat, etc through external programs)
+
 
 --------------------------------------------------
 ---------------------- DONE: ---------------------
