--- a/directnet/TODO
+++ b/directnet/TODO
@@ -8,6 +8,9 @@ Intermediate routes on fnr (so that warning on broken route is possible)
 Transfer files
 Chat rooms (sorta)
 
+Todo ... sometime:
+Generic service commands (video chat, audio chat, etc through external programs)
+
 
 --------------------------------------------------
 ---------------------- DONE: ---------------------
