--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,3 @@
-The entirety of this code was written by Gregor Richards
+The entirety of this code was written by Gregor Richards.
+
+The upcoming (but not yet finished) curses UI is being written by Rob Nesius.
