Some README updates.
git-svn-id: svn://svn.code.sf.net/p/directnet/code/trunk/directnet@135 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 This is DirectNet, the serverless instant messaging system.
 
+This README only applies to the dumb UI.
+
 NOTE: THIS VERSION DOES NOT SUPPORT ENCRYPTION!  ALL MESSAGES TRANSMITTED ARE SENT IN CLEAR TEXT
 TO ANYONE IN YOUR ROUTE ON THE NETWORK!
 
