Fixed a bug when a recv had an error.
git-svn-id: svn://svn.code.sf.net/p/directnet/code/trunk/directnet@136 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 Todo by ALPHA 0.4:
 x One non-dumb UI (FLTK)
-Chat rooms (sorta) (figured out how I'm going to do this, should be easy now)
+x Chat rooms (sorta) (figured out how I'm going to do this, should be easy now)
 Away (simple autoresponse)
 
 Todo ... sometime:
