--- a/directnet/TODO
+++ b/directnet/TODO
@@ -1,6 +1,6 @@
 Todo by ALPHA 0.4:
 x One non-dumb UI (FLTK)
-Chat rooms (sorta) (figured out how I'm going to do this, should be easy now)
+x Chat rooms (sorta) (figured out how I'm going to do this, should be easy now)
 Away (simple autoresponse)
 
 Todo ... sometime:
