--- a/directnet/TODO
+++ b/directnet/TODO
@@ -1,10 +1,3 @@
-Todo by ALPHA 0.4:
-x One non-dumb UI (FLTK)
-x Chat rooms (sorta) (figured out how I'm going to do this, should be easy now)
-x Away (simple autoresponse)
-  - Show in the UI when an away is fired
-Mac OS X support (borked, loads from console, not from finder?)
-
 Todo by ALPHA 0.5:
 Another non-dumb UI (curses)
 Encryption
@@ -30,3 +23,10 @@ autoconf
 Separate UI and connection code properly
 dcr in UI
 Lost connection detection
+
+Todo by ALPHA 0.4:
+One non-dumb UI (FLTK)
+Chat rooms (sorta) (figured out how I'm going to do this, should be easy now)
+Away (simple autoresponse)
+ - Show in the UI when an away is fired
+Mac OS X support (borked, loads from console, not from finder?)
