Preparing for the upcoming 0.5 release.
git-svn-id: svn://svn.code.sf.net/p/directnet/code/trunk/directnet@232 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,1 +1,4 @@
-I don't keep changelogs for ALPHA code, sorry ;)
+Beta 0.5 from Alpha 0.4:
+        - Gaim plugin
+        - Cyfer encryption
+        - Better Win32 support (MingW32 with pthreads)
