--- a/directnet/ChangeLog
+++ b/directnet/ChangeLog
@@ -1,3 +1,6 @@
+Beta 0.6 from Beta 0.5:
+        - Distribution changes (configure, etc)
+
 Beta 0.5 from Alpha 0.4:
         - Gaim plugin
         - Cyfer encryption
