--- a/directnet/ChangeLog
+++ b/directnet/ChangeLog
@@ -1,5 +1,6 @@
 Beta 0.6 from Beta 0.5:
         - Distribution changes (configure, etc)
+        - Updated (no longer inaccurate) README
 
 Beta 0.5 from Alpha 0.4:
         - Gaim plugin
