*** empty log message ***
git-svn-id: svn://svn.code.sf.net/p/directnet/code/trunk/directnet@270 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 Beta 0.6 from Beta 0.5:
         - Distribution changes (configure, etc)
+        - Updated (no longer inaccurate) README
 
 Beta 0.5 from Alpha 0.4:
         - Gaim plugin
