Updated to 0.7 (which may or may not be released)
Fixed an issue with auth-gpg/gpg.c on MingW32.


git-svn-id: svn://svn.code.sf.net/p/directnet/code/trunk/directnet@293 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Beta 0.7 from Beta 0.6:
+        - Authentication support through GPG
+
 Beta 0.6 from Beta 0.5:
         - Distribution changes (configure, etc)
         - Updated (no longer inaccurate) README
