Too many changes to explain.
git-svn-id: svn://svn.code.sf.net/p/directnet/code/trunk/directnet@298 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
-Beta 0.7 from Beta 0.6:
+1.0.0 from Beta 0.6:
         - Authentication support through GPG
+        - Many more minor fixes
 
 Beta 0.6 from Beta 0.5:
         - Distribution changes (configure, etc)
