--- a/directnet/ChangeLog
+++ b/directnet/ChangeLog
@@ -1,3 +1,6 @@
+CVS from 1.0.0rc1:
+        - Fixed a problem that made GPG malfunction on OpenBSD.
+
 1.0.0rc1 from Beta 0.6:
         - Authentication support through GPG
         - Many more minor fixes
