Do I really need to write a CVS changelog entry for a changelog?
git-svn-id: svn://svn.code.sf.net/p/directnet/code/trunk/directnet@303 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+CVS from 1.0.0rc1:
+        - Fixed a problem that made GPG malfunction on OpenBSD.
+
 1.0.0rc1 from Beta 0.6:
         - Authentication support through GPG
         - Many more minor fixes
