--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 CVS from 1.0.0rc1:
         - Fixed a problem that made GPG malfunction on OpenBSD.
+        - Got rid of a rather pointless perror()
 
 1.0.0rc1 from Beta 0.6:
         - Authentication support through GPG
