--- a/directnet/ChangeLog
+++ b/directnet/ChangeLog
@@ -1,6 +1,7 @@
 CVS from 1.0.0rc1:
         - Fixed a problem that made GPG malfunction on OpenBSD.
         - Got rid of a rather pointless perror()
+        - Fixed a problem with OSX calling the GUI client.
 
 1.0.0rc1 from Beta 0.6:
         - Authentication support through GPG
