Fixed a problem with OSX calling the GUI client.
git-svn-id: svn://svn.code.sf.net/p/directnet/code/trunk/directnet@305 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 CVS from 1.0.0rc1:
         - Fixed a problem that made GPG malfunction on OpenBSD.
         - Got rid of a rather pointless perror()
+        - Fixed a problem with OSX calling the GUI client.
 
 1.0.0rc1 from Beta 0.6:
         - Authentication support through GPG
