--- a/directnet/ChangeLog
+++ b/directnet/ChangeLog
@@ -4,6 +4,7 @@ CVS from 1.0.0rc1:
         - Fixed a problem with OSX calling the GUI client.
         - Fixed some FLTK issues with fl_ask etc.
         - Fixed a potentially nasty buffer overflow with dn_name.
+        - Removed the outdated and broken enc-gpg (not auth-gpg).
 
 1.0.0rc1 from Beta 0.6:
         - Authentication support through GPG
