Preparing for 1.0.0rc2.
git-svn-id: svn://svn.code.sf.net/p/directnet/code/trunk/directnet@309 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-CVS from 1.0.0rc1:
+1.0.0rc2 from 1.0.0rc1:
         - Fixed a problem that made GPG malfunction on OpenBSD.
         - Got rid of a rather pointless perror()
         - Fixed a problem with OSX calling the GUI client.
