Fixed a bug in the lost-route detection (probably a NASTY one). Added interruption routes whenever standard routes are added.
git-svn-id: svn://svn.code.sf.net/p/directnet/code/trunk/directnet@311 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+CVS from 1.0.0rc2:
+        - Fixed a bug in the lost-route detection (probably a NASTY one).
+        - Added interruption routes whenever standard routes are added.
+
 1.0.0rc2 from 1.0.0rc1:
         - Fixed a problem that made GPG malfunction on OpenBSD.
         - Got rid of a rather pointless perror()
