And another lost-route detection bug! (Must ... not ... break ... lost-route detection!)
git-svn-id: svn://svn.code.sf.net/p/directnet/code/trunk/directnet@312 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 CVS from 1.0.0rc2:
         - Fixed a bug in the lost-route detection (probably a NASTY one).
+          - And another one! (Must ... not ... break ... lost-route detection!)
         - Added interruption routes whenever standard routes are added.
 
 1.0.0rc2 from 1.0.0rc1:
