--- a/directnet/ChangeLog
+++ b/directnet/ChangeLog
@@ -1,9 +1,11 @@
-CVS from 1.0.0rc2:
+1.0.0rc3 from 1.0.0rc2:
         - Fixed a bug in the lost-route detection (probably a NASTY one).
           - And another one! (Must ... not ... break ... lost-route detection!)
         - Added interruption routes whenever standard routes are added.
         - Fixed a freeze in ui-fltk upon trying to send a message to a user
           that you don't have a route to.
+        - Fixed a bug that was especially prevelant with localhost connections.
+        - A large number of other bugfixes.
 
 1.0.0rc2 from 1.0.0rc1:
         - Fixed a problem that made GPG malfunction on OpenBSD.
