--- a/directnet/ChangeLog
+++ b/directnet/ChangeLog
@@ -1,3 +1,6 @@
+CVS from 1.0.0rc3:
+        - Properly initialized pthread_lock (fix for Win32)
+
 1.0.0rc3 from 1.0.0rc2:
         - Fixed a bug in the lost-route detection (probably a NASTY one).
           - And another one! (Must ... not ... break ... lost-route detection!)
