--- a/directnet/ChangeLog
+++ b/directnet/ChangeLog
@@ -1,3 +1,6 @@
+1.1.0CVS from 1.0.0 branch:
+        - Added prm to the PROTOCOL file.
+
 CVS from 1.0.0rc3:
         - Properly initialized pthread_lock (fix for Win32)
         - Fixed a REALLY nasty bug on receiving connections.
