Added prm to the PROTOCOL file.
git-svn-id: svn://svn.code.sf.net/p/directnet/code/trunk/directnet@319 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+1.1.0CVS from 1.0.0 branch:
+        - Added prm to the PROTOCOL file.
+
 CVS from 1.0.0rc3:
         - Properly initialized pthread_lock (fix for Win32)
         - Fixed a REALLY nasty bug on receiving connections.
