--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 1.1.0CVS from 1.0.0 branch:
         - Added prm to the PROTOCOL file.
+        - First rudimentary support for prm.
 
 CVS from 1.0.0:
         - Added gaim-plugin debug support.
