Prepare for 1.0.1 release.
git-svn-id: svn://svn.code.sf.net/p/directnet/code/directnet/trunk@389 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-SVN from 1.0.0:
+1.0.1 from 1.0.0:
         - Added gaim-plugin debug support.
         - No longer include an internal copy of GMP.
         - Autoconnection and autofind support.
