Updating the changelog to match recent commits.
git-svn-id: svn://svn.code.sf.net/p/directnet/code/directnet/trunk@393 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+CVS from 1.0.1:
+        - Removed all threading (thanks to bd_!)
+
 1.0.1 from 1.0.0:
         - Added gaim-plugin debug support.
         - No longer include an internal copy of GMP.
