src/gaim2-plugin/gaim-plugin.c: Gaim2 plugin working again!
git-svn-id: svn://svn.code.sf.net/p/directnet/code/directnet/trunk@395 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 CVS from 1.0.1:
         - Removed all threading (thanks to bd_!)
+        - Gaim2 plugin working again!
 
 1.0.1 from 1.0.0:
         - Added gaim-plugin debug support.
