ChangeLog: One of these days, I'll remember to update this BEFORE doing commits.
git-svn-id: svn://svn.code.sf.net/p/directnet/code/directnet/c++_Branch@429 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+C++_Branch from CVS:
+        - Rearchitected in C++
+        - With connection info, include hostname and port if the co nnection is
+          outgoing. This will aid shortcircuiting in the future, and generic
+          services in the distant future.
+
 CVS from 1.0.1:
         - Removed all threading (thanks to bd_!)
         - Gaim2 plugin working again!
