Scrolling is working, yay! But because FLTK's bug in anchor handling, it only shows only last line when scrolling, i check if I can fix that bug, but I am not sure about that. (btw, I updated Changelog too;))
git-svn-id: svn://svn.code.sf.net/p/directnet/code/directnet/protov2_Branch@517 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,17 @@
-C++_Branch from CVS:
+C++_Branch from CVS (SVN too):
         - Rearchitected in C++
         - With connection info, include hostname and port if the co nnection is
           outgoing. This will aid shortcircuiting in the future, and generic
           services in the distant future.
+        - GUI improvements (html view in messageboxes)
+              Html viewer support tags:
+              <b>sometext</b> bold text
+              <i>sometext</i> italics text
+              <u>sometext</u> underlined text
+              <br>            newline
+              You can also use colors like:
+              [#blue]bluetexthere[#] 
+        - You can now ban users
 
 CVS from 1.0.1:
         - Removed all threading (thanks to bd_!)
