--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
-C++_Branch from CVS (SVN too):
+2.0a1:
         - Rearchitected in C++
-        - With connection info, include hostname and port if the co nnection is
+        - With connection info, include hostname and port if the connection is
           outgoing. This will aid shortcircuiting in the future, and generic
           services in the distant future.
         - GUI improvements (html view in messageboxes)
@@ -11,11 +11,11 @@ C++_Branch from CVS (SVN too):
               <br>            newline
               You can also use colors like:
               [#blue]bluetexthere[#] 
-        - You can now ban users
-
-CVS from 1.0.1:
+        - You can now block users
         - Removed all threading (thanks to bd_!)
-        - Gaim2 plugin working again!
+        - Distributed hash table backend.
+        - Completely changed the backend message passing.
+        - Far too many changes to list.
 
 1.0.1 from 1.0.0:
         - Added gaim-plugin debug support.
