Preparing for 2.0a2 release (not ready yet)
git-svn-id: svn://svn.code.sf.net/p/directnet/code/directnet/trunk@559 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2.0a2:
+        - DHT data aging is now per-value instead of per-key (this will help
+          with unowned chats)
+        - Buildable under NestedVM (this could eventually lead to a DN Java
+          applet)
+        - Changed the license to allow legal linking against NestedVM.
+        - Added a bit more protocol documentation.
+        - Fixed a bug which caused some data loss in the DHT
+
 2.0a1:
         - Rearchitected in C++
         - With connection info, include hostname and port if the connection is
