src/dht.cc: Fixed some issues brought on by my protocol changes.
src/ui-fltk/ui.cc, src/connection.cc: Demoted establishing a new connection to a non-buddy-establishing event.



git-svn-id: svn://svn.code.sf.net/p/directnet/code/directnet/trunk@560 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@
         - Changed the license to allow legal linking against NestedVM.
         - Added a bit more protocol documentation.
         - Fixed a bug which caused some data loss in the DHT
+        - Changed some protocol commands
+        - Made connection to a new node not establish a UI-visible route
 
 2.0a1:
         - Rearchitected in C++
