--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
-2.0a6:
+2.0a7:
+        - Fixed the bug that made 2.0a6 DOA.
+
+2.0a6 (DOA):
         - Fixed a bug causing nodes with many incomign connections
           (particularly hubs) to hang.
         - Implemented automatic short-circuiting.
