--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2.0a8:
+        - Names and channels are now case-insensitive.
+        - Better reporting of name conflicts.
+        - Fixed a bug which may help reduce data loss.
+        - Successful connection caching.
+
 2.0a7:
         - Fixed the bug that made 2.0a6 DOA.
 
