--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2.0a9:
+        - Only establish short-circuiting connections once.
+        - Fixed a fairly major data-loss bug.
+        - Fixed a silly segfault-on-quit in the FLTK frontend.
+
 2.0a8:
         - Names and channels are now case-insensitive.
         - Better reporting of name conflicts.
