DirectNet now builds a library (libdirectnet) as well as the binary.
auth-none, ui-slang and the gaim2 plugin have all been removed, since they're out of date.



git-svn-id: svn://svn.code.sf.net/p/directnet/code/trunk@636 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,14 @@
 SVN:
         - FLTK: Fixed a bug which caused DirectNet not to close when the main
           window was closed if there were any channel windows open.
+        - All of the C++ code has been moved into the namespace "DirectNet."
+        - DirectNet is now built as a set of libraries along with the binary.
+          The libraries are:
+          libdirectnet.la:      The DirectNet core
+          libdirectnet_enc.la:  The encryption component of DirectNet (can be
+                                swapped out).
+          libdirectnet_auth.la: The authentication component of DirectNet (can
+                                be swapped out).
 
 2.0a9:
         - Only establish short-circuiting connections once.
